exo4 botom-right square visibility fixed

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ h1:hover::before,h1:hover::after{
 /* ----------------------------------- EXO4 ----------------------------------- */
 #exo4 h1{
     padding: 3px;
+    overflow: hidden;
 }
 #exo4 h1::before{
     width: 0;
@@ -82,7 +83,9 @@ h1:hover::before,h1:hover::after{
     width: 0;
     height: 0;
     bottom: 0%;
-    right: 0;
+    right: -6%;
+    border-left: 3px solid red;
+    border-bottom: 3px solid red;
 }
 #exo4 h1:hover::before {
     width: 96%;
@@ -92,9 +95,9 @@ h1:hover::before,h1:hover::after{
     transition: width  1s ease-in-out, height  1s 1s ease-in-out;
 }
 #exo4 h1:hover::after {
-    width: 96%;
+    border-bottom-color: red;
+    border-left-color: red;
+    transition: width 1s 2s ease-in-out, border-bottom-color, height 1s 3s ease-in-out, border-left-color;
+    width: 102%;
     height: 92%;
-    border-left: 3px solid red;
-    border-bottom: 3px solid red;
-    transition: width 1s 2s ease-in-out, height 1s 3s ease-in-out;
 }
